--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "echarts": "^4.3.0",
     "element-ui": "^2.3.8",
     "qs": "^6.5.2",
     "vue": "^2.5.2",
