--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "echarts": "^4.3.0",
+    "element-china-area-data": "^4.1.2",
     "element-ui": "^2.3.8",
+    "iview": "^3.5.1",
     "qs": "^6.5.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
