--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "area-data": "^5.0.6",
     "axios": "^0.18.0",
+    "babel-runtime": "^6.26.0",
     "echarts": "^4.3.0",
     "element-china-area-data": "^4.1.2",
     "element-ui": "^2.3.8",
     "iview": "^3.5.1",
     "qs": "^6.5.2",
     "vue": "^2.5.2",
+    "vue-area-linkage": "^5.1.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1"
   },
